@@ -106,7 +106,7 @@ function admin_menu_menu_alter(&$items) {
         // them the proper router path and b) turn their parent items from
         // MENU_CALLBACK into something visible; otherwise, the menu system
         // does not find the parents and relocates child items to the top-level.
-        if (strpos($path, 'admin/build/node-type/') === 0) {
+        if (strpos($path, 'admin/structure/node-type/') === 0) {
           // Fix router path.
           $newpath = strtr($path, array('/node-type/' => '/types/'));
           $items[$newpath] = $items[$path];
@@ -215,7 +215,7 @@ function admin_menu_init() {
   if ($setting = variable_get('admin_menu_tweak_tabs', 0)) {
     $settings['tweak_tabs'] = $setting;
   }
-  if ($_GET['q'] == 'admin/build/modules' || strpos($_GET['q'], 'admin/build/modules/list') === 0) {
+  if ($_GET['q'] == 'admin/structure/modules' || strpos($_GET['q'], 'admin/structure/modules/list') === 0) {
     $settings['tweak_modules'] = variable_get('admin_menu_tweak_modules', 0);
   }
 
