@@ -45,14 +45,14 @@ class AdminMenuPermissionsTestCase extends DrupalWebTestCase {
     $this->drupalGet('node');
     $this->assertPattern('@<div id="admin-menu">.*admin/content/node@s', t('Administer content link found.'));
     $this->assertNoPattern('@<div id="admin-menu">.*http://drupal.org@s', t('Drupal links not found.'));
-    $this->assertNoPattern('@<div id="admin-menu">.*admin/build/contact@s', t('Contact module link not found.'));
+    $this->assertNoPattern('@<div id="admin-menu">.*admin/structure/contact@s', t('Contact module link not found.'));
 
     // Create a new user with the permission 'display drupal links'.
     $admin_user2 = $this->drupalCreateUser(array('administer site configuration', 'access administration pages', 'administer nodes', 'access administration menu', 'display drupal links'));
     $this->drupalLogin($admin_user2);
     $this->drupalGet('node');
     $this->assertPattern('@<div id="admin-menu">.*http://drupal.org@s', t('Drupal links found.'));
-    $this->assertNoPattern('@<div id="admin-menu">.*admin/build/contact@s', t('Contact module link not found.'));
+    $this->assertNoPattern('@<div id="admin-menu">.*admin/structure/contact@s', t('Contact module link not found.'));
   }
 }
 
@@ -85,7 +85,7 @@ class AdminMenuModulesTestCase extends DrupalWebTestCase {
     // Verify that proper links are displayed.
     $this->assertRaw('<div id="admin-menu">', t('Administration menu is displayed.'));
     $this->drupalGet('node');
-    $this->assertNoPattern('@<div id="admin-menu">.*admin/build/contact@s', t('Contact module link not found.'));
+    $this->assertNoPattern('@<div id="admin-menu">.*admin/structure/contact@s', t('Contact module link not found.'));
 
     // Create a new user with 'administer site-wide contact form' permission.
     $admin_user = $this->drupalCreateUser(array('access administration pages', 'access administration menu', 'administer site-wide contact form'));
@@ -93,7 +93,7 @@ class AdminMenuModulesTestCase extends DrupalWebTestCase {
 
     // Verify that proper links are displayed.
     $this->drupalGet('node');
-    $this->assertPattern('@<div id="admin-menu">.*admin/build/contact@s', t('Contact module link found.'));
+    $this->assertPattern('@<div id="admin-menu">.*admin/structure/contact@s', t('Contact module link found.'));
   }
 }
 
@@ -142,8 +142,8 @@ class AdminMenuLinksTestCase extends DrupalWebTestCase {
     // We are explicitly NOT using t() here, since the purpose is to test our
     // custom link titles and 't' option.
     $links = array(
-      '/admin/build/types/page' => t('Page'),
-      '/admin/build/types/special' => t('Cool & Special'),
+      '/admin/structure/types/page' => t('Page'),
+      '/admin/structure/types/special' => t('Cool & Special'),
     );
     foreach ($links as $url => $title) {
       $this->assertFieldByXPath('//div[@id="admin-menu"]//a[@href="' . $url . '"]', $title, t('!link-title content-type link found.', array('!link-title' => $title)));
