@@ -6,6 +6,7 @@ Admin Menu x.x-x.x, xxxx-xx-xx
 
 Admin Menu 7.x-3.x, xxxx-xx-xx
 ------------------------------
+#525638 by Razorraser: Updated for admin/build renamed to admin/structure.
 by sun: Fixed destination query string of current page not applied to links.
 #276751 by sun: Revamped rendering of menu additions/widgets.
 #500866 by sun: Updated for removed t() from getInfo() in tests.
